# miwitracker_api

./: .gitignore  README.md  access_token.txt  call.py  commands.txt  config.example copy.ini  config.example.ini  config.ini  config.py  delete_pyc.py  find_exsiting_imei.py  get_bloodpress.py  get_onlinestatus.py  index.html  locate.py  logging.prod.conf  miwi.py  power.py  pyproject.toml  requirements.txt  send_msg.py  server.py  set_blockphone.py  set_callcenter.py  set_fallalert.py  set_healthtrack.py  set_phonebook.py  set_sos.py  set_standstill.py
app/: config.py  main.py
app/core/: db.py  logger.py  miwi.py  query.py
app/models/: devices.py  project.py  projects.py  settings.py  watch.py
app/routes/: devices.py  groups.py  projects.py  settings.py
app/schema/: base.py  device.py  exceptions.py  group.py  project.py  response.py  settings.py  watch.py
profile/: bktc-new.txt  bktc.txt  cv202103-4s-new.txt  cv202103-4s.txt  cv202104-new.txt  cv202104.txt  ed202101.txt  ed202202-new.txt  ed202202.txt  ge202104.txt  hy201802.txt  hy202008-new.txt  hy202204-new.txt  hy202204-watches.txt  hy202409-new.txt  hy202409.txt  nl202006-miss.txt  nl202006-mock.txt  nl202006-msg-unsent.txt  nl202006.txt  office.txt
settings/: bktc-sos.txt  bktc_phonebook.json  cv202103-4s_phonebook.json  cv202103-4s_sos.txt  cv202104-4s_sos.txt  cv202104_phonebook.json  ed202202_phonebook.json  ed202202_sos.txt  hy201802-sos.txt  hy202008-sos.txt  hy202008_phonebook.json  hy202204-sos.txt  nl202006-sos.txt  nl202006_phonebook.json  office_phonebook.json  standstill.json
